--- a/InCallUI/res/values-kn-rIN/strings.xml
+++ b/InCallUI/res/values-kn-rIN/strings.xml
@@ -22,25 +22,6 @@
     <string name="unknown" msgid="6878797917991465859">"ಅಜ್ಞಾತ"</string>
     <string name="private_num" msgid="6713286113000232309">"ಖಾಸಗಿ ಸಂಖ್ಯೆ"</string>
     <string name="payphone" msgid="1931775086311769314">"ಪಾವತಿಯ ಫೋನ್‌"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"ಲೈನ್‌ ಕಾರ್ಯನಿರತವಾಗಿದೆ"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"ನೆಟ್‌ವರ್ಕ್‌ ಕಾರ್ಯನಿರತವಾಗಿದೆ"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"ಪ್ರತಿಕ್ರಿಯೆ ಇಲ್ಲ, ಸಮಯ ಮೀರಿದೆ"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"ಸರ್ವರ್ ಲಭ್ಯವಿಲ್ಲ"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"ಸಂಖ್ಯೆಯನ್ನು ತಲುಪಲಾಗಲಿಲ್ಲ"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"ತಪ್ಪಾದ ಬಳಕೆದಾರ ಹೆಸರು ಅಥವಾ ಪಾಸ್‌ವರ್ಡ್"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"ನೆಟ್‌ವರ್ಕ್‌ನ ಹೊರಗಿನಿಂದ ಕರೆ ಮಾಡಲಾಗಿದೆ"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"ಸರ್ವರ್‌ ದೋಷ. ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"ಸಿಗ್ನಲ್ ಇಲ್ಲ"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM ಮಿತಿ ಮೀರಿದೆ"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"ರೇಡಿಯೋ ಆಫ್"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"ಯಾವುದೇ SIM ಇಲ್ಲ ಅಥವಾ SIM ದೋಷ"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"ಮೊಬೈಲ್ ನೆಟ್‌ವರ್ಕ್ ಲಭ್ಯವಿಲ್ಲ"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"FDN ನಿಂದ ಹೊರಹೋಗುವ ಕರೆಗಳನ್ನು ನಿರ್ಬಂಧಿಸಿದೆ."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"ಕರೆ ಬಾರಿಂಗ್ ಆನ್‌ ಆಗಿರುವಾಗ ನಿಮಗೆ ಹೊರಹೋಗುವ ಕರೆಗಳನ್ನು ಮಾಡಲು ಸಾಧ್ಯವಾಗುವುದಿಲ್ಲ."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"ಪ್ರವೇಶ ನಿಯಂತ್ರಣದಿಂದ ಎಲ್ಲ ಕರೆಗಳನ್ನು ನಿರ್ಬಂಧಿಸಲಾಗಿದೆ."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"ಪ್ರವೇಶ ನಿಯಂತ್ರಣದಿಂದ ತುರ್ತು ಕರೆಗಳನ್ನು ನಿರ್ಬಂಧಿಸಲಾಗಿದೆ."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"ಸಾಮಾನ್ಯ ಕರೆಗಳನ್ನು ಎಲ್ಲ ಪ್ರವೇಶ ನಿಯಂತ್ರಣವು ನಿರ್ಬಂಧಿಸಿದೆ."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"ಅಮಾನ್ಯವಾದ ಸಂಖ್ಯೆ"</string>
     <string name="confCall" msgid="1904840547188336828">"ಕಾನ್ಫರೆನ್ಸ್ ಕರೆ"</string>
     <string name="call_lost" msgid="317670617901479594">"ಕರೆಯ ಸಂಪರ್ಕ ಕಡಿತಗೊಂಡಿದೆ."</string>
     <string name="ok" msgid="3811371167865772377">"ಸರಿ"</string>
@@ -72,10 +53,10 @@
     <string name="card_title_callback_number" msgid="4604563437776874016">"ನಿಮ್ಮ ಕಾಲ್‌ ಬ್ಯಾಕ್ ಸಂಖ್ಯೆ\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="card_title_callback_number_emergency" msgid="85588345502265075">"ನಿಮ್ಮ ತುರ್ತು ಕರೆಯ ಸಂಖ್ಯೆ\n <xliff:g id="DARK_NUMBER">%1$s</xliff:g>"</string>
     <string name="notification_dialing" msgid="2107666444937350731">"ಡಯಲ್‌ ಮಾಡಲಾಗುತ್ತಿದೆ"</string>
-    <string name="notification_missedCallTitle" msgid="7554385905572364535">"ತಪ್ಪಿ ಹೋದ ಕರೆ"</string>
+    <string name="notification_missedCallTitle" msgid="7554385905572364535">"ಮಿಸ್ಡ್‌ ಕಾಲ್‌"</string>
     <string name="notification_missedCallsTitle" msgid="1361677948941502522">"ತಪ್ಪಿದ ಕರೆಗಳು"</string>
     <string name="notification_missedCallsMsg" msgid="4575787816055205600">"<xliff:g id="NUM_MISSED_CALLS">%s</xliff:g> ತಪ್ಪಿದ ಕರೆಗಳು"</string>
-    <string name="notification_missedCallTicker" msgid="504686252427747209">"<xliff:g id="MISSED_CALL_FROM">%s</xliff:g> ಅವರಿಂದ ತಪ್ಪಿದ ಕರೆ"</string>
+    <string name="notification_missedCallTicker" msgid="504686252427747209">"<xliff:g id="MISSED_CALL_FROM">%s</xliff:g> ಅವರಿಂದ ಮಿಸ್ಡ್‌ ಕಾಲ್‌"</string>
     <string name="notification_ongoing_call" msgid="7068688957273482989">"ಚಾಲ್ತಿಯಲ್ಲಿರುವ ಕರೆ"</string>
     <string name="notification_on_hold" msgid="3480694969511790465">"ತಡೆಹಿಡಿಯಲಾಗಿದೆ"</string>
     <string name="notification_incoming_call" msgid="2820429205043529642">"ಒಳಬರುವ ಕರೆ"</string>
@@ -107,7 +88,6 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"ಕಾನ್ಫರೆನ್ಸ್ ಕರೆಗಳನ್ನು ಮಾಡಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"ಕರೆಯನ್ನು ತಿರಸ್ಕರಿಸಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"ಕರೆ(ಗಳನ್ನು) ಬಿಡುಗಡೆಗೊಳಿಸಲು ಸಾಧ್ಯವಾಗಲಿಲ್ಲ."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"ಅಪರಿಚಿತ ಧ್ವನಿಮೇಲ್ ಸಂಖ್ಯೆ."</string>
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP ಕರೆ"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"ತುರ್ತು ಕರೆಗಳು"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"ರೇಡಿಯೋ ಆನ್‌ ಮಾಡಲಾಗುತ್ತಿದೆ…"</string>
@@ -190,5 +170,4 @@
     <string name="preference_category_ringtone" msgid="5197960752529332721">"ರಿಂಗ್‌ಟೋನ್‌‌ &amp; ವೈಬ್ರೇಟ್‌"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"ಕಾನ್ಫರೆನ್ಸ್ ಕರೆಯನ್ನು ನಿರ್ವಹಿಸಿ"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"ತುರ್ತು ಸಂಖ್ಯೆ"</string>
-    <string name="select_account_dialog_title" msgid="5730339500156684204">"ಖಾತೆ ಆಯ್ಕೆಮಾಡಿ"</string>
 </resources>
