--- a/InCallUI/res/values-mr-rIN/strings.xml
+++ b/InCallUI/res/values-mr-rIN/strings.xml
@@ -22,32 +22,13 @@
     <string name="unknown" msgid="6878797917991465859">"अज्ञात"</string>
     <string name="private_num" msgid="6713286113000232309">"खाजगी नंबर"</string>
     <string name="payphone" msgid="1931775086311769314">"देय फोन"</string>
-    <string name="callFailed_userBusy" msgid="8851106999809294904">"लाइन व्यस्त"</string>
-    <string name="callFailed_congestion" msgid="8737761615702718375">"नेटवर्क व्यस्त"</string>
-    <string name="callFailed_timedOut" msgid="7590961703135543346">"कोणताही प्रतिसाद नाही, कालबाह्य झाले"</string>
-    <string name="callFailed_server_unreachable" msgid="2133506577423869729">"सर्व्हर पोहचण्‍यायोग्‍य नाही"</string>
-    <string name="callFailed_number_unreachable" msgid="7632566442515734778">"नंबर पोहचण्‍यायोग्‍य नाही"</string>
-    <string name="callFailed_invalid_credentials" msgid="8226835346196775378">"चुकीचे वापरकर्तानाव किंवा संकेतशब्द"</string>
-    <string name="callFailed_out_of_network" msgid="8740943329772180507">"नेटवर्क-बाहेरून कॉल केला"</string>
-    <string name="callFailed_server_error" msgid="5717915213586193217">"सर्व्हर त्रुटी. कृपया नंतर पुन्हा प्रयत्न करा."</string>
-    <string name="callFailed_noSignal" msgid="1889803273616031933">"सिग्नल नाही"</string>
-    <string name="callFailed_limitExceeded" msgid="4958065157970101491">"ACM मर्यादा ओलांडली"</string>
-    <string name="callFailed_powerOff" msgid="2766035859391549713">"रेडिओ बंद"</string>
-    <string name="callFailed_simError" msgid="4476360200030635828">"SIM नाही किंवा SIM त्रुटी"</string>
-    <string name="callFailed_outOfService" msgid="682300184520329366">"मोबाइल नेटवर्क उपलब्ध नाही"</string>
-    <string name="callFailed_fdn_only" msgid="2850204579765430641">"केले जाणारे कॉल FDN द्वारे प्रतिबंधित केले जातात."</string>
-    <string name="callFailed_cb_enabled" msgid="3686963693629739680">"कॉल वगळणे चालू असताना आपण कॉल करू शकत नाही."</string>
-    <string name="callFailed_dsac_restricted" msgid="2180223622768522345">"सर्व कॉल प्रवेश नियंत्रणाद्वारे प्रतिबंधित केले जातात."</string>
-    <string name="callFailed_dsac_restricted_emergency" msgid="4353654268813314466">"आणीबाणीचे कॉल प्रवेश नियंत्रणाद्वारे प्रतिबंधित केले जातात."</string>
-    <string name="callFailed_dsac_restricted_normal" msgid="2680774510252408620">"सामान्‍य कॉल प्रवेश नियंत्रणाद्वारे प्रतिबंधित केले जातात."</string>
-    <string name="callFailed_unobtainable_number" msgid="4736290912891155067">"अवैध नंबर"</string>
     <string name="confCall" msgid="1904840547188336828">"परिषद कॉल"</string>
     <string name="call_lost" msgid="317670617901479594">"कॉल गमावला गेला आहे."</string>
     <string name="ok" msgid="3811371167865772377">"ठीक"</string>
     <string name="audio_mode_speaker" msgid="27649582100085266">"स्पीकर"</string>
     <string name="audio_mode_earpiece" msgid="4156527186373869107">"हँडसेट इअरपीस"</string>
     <string name="audio_mode_wired_headset" msgid="1465350758489175975">"वायर्ड हेडसेट"</string>
-    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"Bluetooth"</string>
+    <string name="audio_mode_bluetooth" msgid="3047641300848211128">"ब"</string>
     <string name="wait_prompt_str" msgid="7601815427707856238">"खालील टोन पाठवायचे?\n"</string>
     <string name="pause_prompt_str" msgid="1789964702154314806">"टोन पाठवित आहे\n"</string>
     <string name="send_button" msgid="4106860097497818751">"पाठवा"</string>
@@ -107,7 +88,6 @@
     <string name="incall_error_supp_service_conference" msgid="2505727299596357312">"परिषद कॉल करण्‍यात अक्षम."</string>
     <string name="incall_error_supp_service_reject" msgid="7055164130563826216">"कॉलला नकार देण्‍यात अक्षम."</string>
     <string name="incall_error_supp_service_hangup" msgid="7417583238334762737">"कॉल रीलिज करण्‍यात अक्षम."</string>
-    <string name="incall_error_missing_voicemail_number" msgid="2995137160077097934">"व्हॉइसमेल क्रमांक अज्ञात."</string>
     <string name="incall_call_type_label_sip" msgid="4931428719494190371">"SIP कॉल"</string>
     <string name="emergency_enable_radio_dialog_title" msgid="4627849966634578257">"आणीबाणीचा कॉल"</string>
     <string name="emergency_enable_radio_dialog_message" msgid="207613549344420291">"रेडिओ चालू करीत आहे..."</string>
@@ -164,7 +144,7 @@
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"स्पीकरफोन निवडला"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"इअरपिस निवडला"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"तार असलेला हेडसेट निवडला"</string>
-    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"Bluetooth हेडसेट निवडला"</string>
+    <string name="accessibility_bluetooth_headset_selected" msgid="2785473629292181736">"ब हेडसेट निवडला"</string>
     <string name="accessibility_call_muted" msgid="2776111226185342220">"कॉल नि.शब्‍द केला."</string>
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"कॉल सशब्द केला."</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"कॉल होल्डवर ठेवला."</string>
@@ -190,5 +170,4 @@
     <string name="preference_category_ringtone" msgid="5197960752529332721">"रिंगटोन आणि कंपन"</string>
     <string name="manageConferenceLabel" msgid="4691922394301969053">"परिषद कॉल व्यवस्थापित करा"</string>
     <string name="emergency_call_dialog_number_for_display" msgid="8373041754188879871">"आणीबाणीचा नंबर"</string>
-    <string name="select_account_dialog_title" msgid="5730339500156684204">"खाते निवडा"</string>
 </resources>
