--- a/InCallUI/res/values-zh-rTW/strings.xml
+++ b/InCallUI/res/values-zh-rTW/strings.xml
@@ -128,20 +128,6 @@
     <string name="respond_via_sms_custom_message" msgid="6158880869935281078">"自行撰寫回應…"</string>
     <string name="custom_message_cancel" msgid="7516406059429609296">"取消"</string>
     <string name="custom_message_send" msgid="5795754217085747742">"傳送"</string>
-    <string name="description_image_button_one" msgid="5502718871331943463">"1"</string>
-    <string name="description_image_button_two" msgid="4903738528222924522">"2"</string>
-    <string name="description_image_button_three" msgid="5570985408463782329">"3"</string>
-    <string name="description_image_button_four" msgid="1697520001239289074">"4"</string>
-    <string name="description_image_button_five" msgid="3450276493026943454">"5"</string>
-    <string name="description_image_button_six" msgid="2070376172268675300">"6"</string>
-    <string name="description_image_button_seven" msgid="1757351311199993371">"7"</string>
-    <string name="description_image_button_eight" msgid="4734693919020613227">"8"</string>
-    <string name="description_image_button_nine" msgid="5568534122590597040">"9"</string>
-    <string name="description_image_button_star" msgid="1976280813017254462">"星號"</string>
-    <string name="description_image_button_zero" msgid="4211255756866893605">"零"</string>
-    <string name="description_image_button_pound" msgid="1716041284529917866">"井字鍵"</string>
-    <string name="description_dial_button" msgid="7459705245418435351">"撥號"</string>
-    <string name="description_delete_button" msgid="4015842181592283903">"Backspace"</string>
     <string name="accessibility_speakerphone_selected" msgid="4389354567657833468">"已選取擴音器"</string>
     <string name="accessibility_earpiece_selected" msgid="5749525199671068663">"已選取耳機"</string>
     <string name="accessibility_wired_headset_selected" msgid="2984920743124263932">"已選取有線耳機"</string>
@@ -150,7 +136,7 @@
     <string name="accessibility_call_unmuted" msgid="7496527089753980871">"通話靜音已取消。"</string>
     <string name="accessibility_call_put_on_hold" msgid="4226100429657528833">"通話保留中。"</string>
     <string name="accessibility_call_removed_from_hold" msgid="2269352120695851563">"已移除保留的通話。"</string>
-    <string name="description_target_answer" msgid="7205604197797472471">"解答"</string>
+    <string name="description_target_answer" msgid="7205604197797472471">"接聽"</string>
     <string name="description_target_send_sms" msgid="2098326025587950144">"傳送簡訊"</string>
     <string name="description_target_decline" msgid="4789834364389731957">"拒絕"</string>
     <string name="description_target_answer_video_call" msgid="3495965588512395026">"接聽視訊通話"</string>
